<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/loginfrag_title"
        android:textAlignment="center"
        android:textSize="12pt" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="@string/username_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Login" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register_text" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerText"
        android:layout_alignBottom="@id/registerLink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register_link"
        android:textColor="@color/red" />

</RelativeLayout>