<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textSize="12pt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/registerName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerLastnameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerNameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/registerLastname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_lastname"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerUsernameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerLastnameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_username"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmailAddressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerUsernameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/registerEmailAddress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerEmailAddressLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerConfirmPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerPasswordLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerConfirmPasswordLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register_button" />

</RelativeLayout>