<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_title"
        android:layout_centerHorizontal="true"
        android:textSize="15pt"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@id/loginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:hint="@string/username_text"/>

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameInput"
        android:layout_marginTop="30dp"
        android:hint="@string/password_text"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_below="@id/PasswordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>